fix: use webkit available space for h-screen when on ios

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
